app/kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: appName-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 10
  template:
    metadata:
      labels:
        app: appName
    spec:
      containers:
      - name: app-container
        image: app-image
        ports:
        - containerPort: 3000
        readinessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
