app/kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: appName-service
spec:
  selector:
    app: appName
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
